src/test/deca/syntax/valid/lexer/include.deca
// Description:
//    Programme minimaliste testant l'inclusion.
//
// Resultats:
//    ok

#include "float.deca"
