src/test/deca/syntax/invalid/parser/circular-include.deca
// Description:
//    Test invalide du lexer.
//
// Resultats:
//    erreur ligne 7

#include "circular-include.deca"
